[gd_scene load_steps=10 format=2]

[ext_resource path="res://entities/CastleProps.gd" type="Script" id=1]
[ext_resource path="res://img/props_castle.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 19, 28 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 18, 11.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 20, 14.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 9 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 7, 13 )

[node name="CastleProps" type="StaticBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
vframes = 4
frame = 6

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Collision2" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
disabled = true

[node name="Collision3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )
disabled = true

[node name="Collision4" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 4 )
disabled = true

[node name="Collision5" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -0.5 )
shape = SubResource( 5 )
disabled = true

[node name="Collision6" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 6 )
disabled = true

[node name="Collision7" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )
disabled = true
